# purple-soul

./: .gitignore  README.md  build_portable.sh  purple_soul.py  pyproject.toml  release.sh  writer.py
