[build-system]
# 锁 <1.30：hatchling 1.30 起生成 metadata 2.5，twine/packaging 暂不认（发布会 InvalidDistribution）。待生态支持后可放开。
requires = ["hatchling<1.30"]
build-backend = "hatchling.build"

[project]
name = "purple-soul"
version = "0.2.16"
description = "A minimalist terminal writing tool for geeks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "thatgameapple"}]
dependencies = [
    "textual>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/thatgameapple/purple-soul"
Repository = "https://github.com/thatgameapple/purple-soul"
Issues = "https://github.com/thatgameapple/purple-soul/issues"

[project.scripts]
purple-soul = "purple_soul:main"

[tool.hatch.build.targets.wheel]
include = ["purple_soul.py"]
